--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@fontsource-variable/onest": "^5.2.7",
     "@tailwindcss/vite": "^4.0.17",
     "astro": "^5.5.5",
     "tailwindcss": "^4.0.17"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4"
   }
 }
