--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4"
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
