--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "astro": "^5.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.1"
   },
   "devDependencies": {
